# gpui

./: Cargo.toml  README.md  rust-toolchain.toml
crates/gpui/: Cargo.toml
crates/gpui/examples/: dma_buf_surface.rs  gradient.rs  video_surface.rs
crates/gpui/examples/svg/: svg.rs
crates/gpui/src/: color.rs  effect.rs  effect.wgsl  effect_additional_images.wgsl  effect_image.wgsl  effect_mask.wgsl  effect_second_image.wgsl  geometry.rs  gpui.rs  platform.rs  scene.rs  style.rs  styled.rs  svg_renderer.rs  window.rs
crates/gpui/src/elements/: img.rs  surface.rs  svg.rs
crates/gpui/src/platform/test/: display.rs
crates/gpui_effects/: Cargo.toml
crates/gpui_effects/examples/: effects.rs  flip.rs  flip_16.rs  gradient_masks.rs  masked_effects.rs  motion_layer.rs
crates/gpui_effects/src/: builtins.rs  element.rs  flip.rs  lib.rs  masked_builtins.rs  masked_effect.rs  masked_fill.rs  motion.rs
crates/gpui_effects/src/shaders/: flip.wgsl  flip_rigid.wgsl  flip_sampling.wgsl  flip_soft.wgsl
crates/gpui_linux/src/linux/headless/: window.rs
crates/gpui_linux/src/linux/wayland/: client.rs  display.rs  window.rs
crates/gpui_linux/src/linux/x11/: display.rs
crates/gpui_macos/: Cargo.toml
crates/gpui_macos/src/: display.rs  metal_atlas.rs  metal_renderer.rs  shaders.metal
crates/gpui_macros/src/: styles.rs
crates/gpui_video/: Cargo.toml  README.md
crates/gpui_video/examples/: frame_at.rs  overlay_controls.rs  play.rs  webdav.rs
crates/gpui_video/src/: container.rs  frame.rs  frame_extractor.rs  gstreamer_backend.rs  lib.rs  network.rs  player.rs  source.rs  stats.rs  timeline.rs  window_sizing.rs
crates/gpui_video/src/gstreamer_backend/: core_video.rs  dma_buf.rs
crates/gpui_web/src/: display.rs
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/src/: cosmic_text_system.rs  gpui_wgpu.rs  shaders.wgsl  shaders_subpixel.wgsl  wgpu_atlas.rs  wgpu_context.rs  wgpu_renderer.rs
crates/gpui_windows/: Cargo.toml
crates/gpui_windows/src/: directx_renderer.rs  display.rs  shaders.hlsl
crates/reqwest_client/src/: reqwest_client.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: sum_tree.rs
crates/util_macros/src/: util_macros.rs
crates/watch/: Cargo.toml
crates/watch/src/: watch.rs
