[package]
name = "gpui_effects"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
accesskit.workspace = true
gpui.workspace = true
refineable.workspace = true

[lints]
workspace = true

[dev-dependencies]
anyhow.workspace = true
gpui_platform = { workspace = true, features = ["font-kit", "wayland", "x11"] }
