[package]
name = "gpui_video"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
gpui = { workspace = true, features = ["wayland", "x11"] }
gst = { package = "gstreamer", version = "0.25" }
gst-app = { package = "gstreamer-app", version = "0.25", features = ["v1_24"] }
gst-video = { package = "gstreamer-video", version = "0.25", features = ["v1_24"] }
url.workspace = true

gpui_platform = { workspace = true, features = ["wayland", "x11", "font-kit"] }

[target.'cfg(target_os = "linux")'.dependencies]
gst-allocators = { package = "gstreamer-allocators", version = "0.25" }

[lints]
workspace = true
